# python-project-lvl4

./: .codeclimate.yml  .env.local  .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: CI.yml
task_manager/: admin.py  filters.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
task_manager/migrations/: 0001_initial.py  0002_auto_20201010_1142.py  0003_auto_20201010_1155.py  0004_auto_20201010_1633.py  0005_auto_20201013_2034.py  0006_auto_20201013_2047.py  0007_auto_20201017_0747.py  0008_auto_20201017_0949.py  0009_auto_20201017_1517.py  0010_auto_20201017_2231.py  0011_tag_task_taskstatus.py  0012_auto_20201031_1917.py
task_manager/static/: staticfiles.json
task_manager/static/task_manager/: main.89fdc38d3865.js
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tags/: models.py  urls.py  views.py
task_manager/tags/migrations/: 0001_initial.py
task_manager/tasks/: forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  home.html  index.html  new_task.html  signup.html
task_manager/templates/registration/: login.html  signup.html  user_password_update_form.html  user_update_form.html
task_manager/templates/task_manager/: base.html  home.html  status_confirm_delete.html  status_create_form.html  status_list.html  status_update_form.html  tag_confirm_delete.html  tag_create_form.html  tag_list.html  tag_update_form.html  task_confirm_delete.html  task_create_form.html  task_detail.html  task_list.html  task_update_form.html
(+9 files in other folders)
