[tool.poetry]
name = "veetors_task_manager"
version = "0.0.1"
description = "task manager"
authors = ["veetors <veetor.s@gmail.com>"]
license = "MIT"
repository = "https://github.com/veetors/task-manager"
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Programming Language :: Python"
]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.7"
rollbar = "^0.15.0"
python-dotenv = "^0.13.0"
gunicorn = "^20.0.4"
django-bootstrap4 = "^2.2.0"
django-filter = "^2.4.0"
Faker = "^4.14.0"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
requests_mock = "^1.8.0"
pytest-watch = "^4.2.0"
flake8 = "^3.8.4"
isort = "^5.5.4"
flake8-isort = "^4.0.0"
coverage = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
